initial resume source

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
   <title>Resume</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+  <link href="assets/css/font.css" rel="stylesheet" type="text/css" />
+  <link href="assets/css/google_font.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
   <app-root></app-root>
+  <script src="assets/js/all.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/scripts.js"></script>
 </body>
+
 </html>
